--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "pinia": "^2.0.20",
     "sass": "^1.54.5",
     "vue": "^3.2.37",
-    "vue-axios": "^3.4.1"
+    "vue-axios": "^3.4.1",
+    "vue-router": "^4.1.5"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^3.0.3",
